Rough layout for index page based on figma
- Header section layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,43 @@
----
----
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Playmakers Dev Team</title>
-
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/home.css">
-
-    <style>
-        header {
-            display: flex;
-            flex-direction: column;
-            gap: 1em;
-            max-width: min(100%, 68ch);
-        }
-    </style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Playmakers Dev Team</title>
+	<link rel="stylesheet" href="/style/global.css">
+	<link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    <main>
-    </main>
+	
+	
+	<section id="about">
+		<div id="heading">
+			<h1>PLAYMAKERS DEV TEAM</h1>
+			<div id="logos">
+				<img src="/assets/logo.jpg" alt="PDT logo">
+				<img src="/assets/uts_logo.jpeg" alt="UTS logo">
+			</div>
+		</div>
+	
+		<section id="details">
+			<nav>
+				<div class="link">
+					<img src="/assets/icons/games.svg" alt="Games icon">
+					<p>Games</p>
+				</div>
+				<div class="link">
+					<img src="/assets/icons/people.svg" alt="People icon">
+					<p>People</p>
+				</div>
+			</nav>
+			<p>A UTS based game studio run by students and faculty</p>
+		</section>
+	</section>
+
+	<section id="showcase">
+		<h2>SOUL SEARCHER</h2>	
+		<p>A PDT Game</p>
+	</section>
 </body>
 </html>
