--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1,28 +1,28 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-:root {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  font-size: 1rem;
-  --user-font-scale: 1rem - 16px;
-  font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.125rem);
+	box-sizing: border-box;
+	margin: 0;
 }
 
 body {
-  padding: 4rem 2rem;
-  width: 100%;
-  min-height: 100vh;
-  display: grid;
-  justify-content: center;
-  background: #f9fafb;
-  color: #111827;
+	background-color: var(--pdt-black);
+	color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background: #111827;
-    color: #fff;
-  }
+:root {
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+		sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	font-size: 1rem;
+	--user-font-scale: 1rem - 16px;
+	font-size: clamp(
+		0.875rem,
+		0.4626rem + 1.0309vw + var(--user-font-scale),
+		1.125rem
+	);
+
+	/* COLORS */
+	--pdt-black: #1e1e1e;
+	--pdt-blue: #7494ea;
+	--pdt-red: #f93535;
+	--pdt-darker-black: #151515;
+	/* White, Black */
 }
