--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,15 @@
 			<nav>
 				<div class="link">
 					<img src="/assets/icons/games.svg" alt="Games icon">
-					<p>Games</p>
+					<a href="#">
+						<p>Games</p>
+					</a>
 				</div>
 				<div class="link">
 					<img src="/assets/icons/people.svg" alt="People icon">
-					<p>People</p>
+					<a href="#">
+						<p>People</p>
+					</a>
 				</div>
 			</nav>
 			<p>A UTS based game studio run by students and faculty</p>
