--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@
 </head>
 <body>
 	
-	
+	<main>
 	<section id="about">
 		<div id="heading">
 			<h1>PLAYMAKERS DEV TEAM</h1>
@@ -41,7 +41,20 @@
 
 	<section id="showcase">
 		<h2>SOUL SEARCHER</h2>	
-		<p>A PDT Game</p>
+		<div class="flex-container">
+			<div id="cta">
+				<p class="subtitle">A PDT Game</p>
+				<p class="game-description">Delve through a dead man's memories in this turn based adventure. </p>
+				<a href="/games/soul-searcher">
+					<button>More</button>
+				</a>
+				<p class="year italic">2021</p>
+				<p class="genre italic">Turn based strategy game </p>
+			</div>
+			<img src="/assets/images/niles_concept.png" alt="concept art">
+		</div>
 	</section>
+	</main>
+	
 </body>
 </html>
