--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1,3 +1,6 @@
+/* FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Gothic+A1&family=Neuton:wght@300&display=swap");
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -31,4 +34,18 @@ a:link,
 a:visited {
 	color: inherit;
 	text-decoration: none;
+}
+
+/* UTILITIES */
+
+.italic {
+	font-style: italic;
+}
+
+.relative {
+	position: relative;
+}
+
+.text-center {
+	text-align: center;
 }
