--- a/src/pages/games/soul-searcher.astro
+++ b/src/pages/games/soul-searcher.astro
@@ -1,6 +1,7 @@
 ---
 	import team_data from "../../data/soul-searcher-team.json";
 	import Credits from "../../components/Credits.svelte";
+	import MainNav from "../../components/MainNav.svelte";
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -14,6 +15,7 @@
 </head>
 <body>
 	<main>
+		<MainNav />
 		<img id="banner" src="/assets/images/soul-searcher/banner.png" alt="Banner image of the soul searcher game">
 		<div class="grid">
 			<div class="text-container">
@@ -26,7 +28,7 @@
 			<img src="/assets/images/soul-searcher/spawn.gif" alt="">
 		</div>
 		
-		<a href="#detail" class="fit">
+		<a id="click-me" href="#detail" class="fit">
 			<img id="icon-point" src="/assets/icons/point.svg" alt="cursor">
 		</a>
 		
