--- a/src/pages/games/soul-searcher.astro
+++ b/src/pages/games/soul-searcher.astro
@@ -40,13 +40,12 @@
 		
 		<section id="detail" class="text-section">
 			<h2>More</h2>
-			<p>Venture solo into the depths of the human mind with characters themed around abstract human concepts such as ideologies, life values, and dream. You will get to explore fragments of a man's memories that have been twisted into hostile, surreal dungeons by an outside force.</p>
+			<p>Venture solo into the depths of the human mind with characters themed around abstract human concepts such as ideologies, life values, and dreams. You will get to explore fragments of a man's memories that have been twisted into hostile, surreal dungeons by an outside force.</p>
 			<p>These adventures into the memory moiré entail:</p>
 			<ul>
-				<li>Levelling up and perk customization</li>
-				<li>The wide array of characters and enemies</li>
-				<li>Branching paths of mechanical and mental skills</li>
-				<li>Bosses and relics to spice up the outcome and obstacles of your runs</li>
+				<li>Ability upgrades and team customisation</li>
+				<li>A variety of enemies and special attacks</li>
+				<li>A lush watercolour and hand-animated world</li>
 			</ul>
 		</section>
 		
