index: Change home page image for soul searcher

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,18 +40,20 @@
 	</section>
 
 	<section id="showcase">
-		<h2>SOUL SEARCHER</h2>	
 		<div class="flex-container">
 			<div id="cta">
-				<p class="subtitle">A PDT Game</p>
+				<p class="subtitle">Soul Searcher</p>
+				<p >A PDT Game,</p>
 				<p class="game-description">Delve through a dead man's memories in this turn based adventure. </p>
 				<a href="/games/soul-searcher">
 					<button>More</button>
 				</a>
 				<p class="year italic">2021</p>
-				<p class="genre italic">Turn based strategy game </p>
+				<p class="genre italic">Turn based strategy game</p>
 			</div>
-			<img src="/assets/images/soul-searcher/niles_concept.png" alt="concept art">
+			<a href="/games/soul-searcher">
+				<img src="/assets/images/soul-searcher/itch_cover.png" alt="concept art">
+			</a>
 		</div>
 	</section>
 	</main>
