--- a/public/style/index.css
+++ b/public/style/index.css
@@ -88,6 +88,9 @@ nav > div:first-child {
 	font-family: "Neuton", serif;
 	font-size: 1.1rem;
 	margin-top: 1rem;
+	background: black;
+	border-radius: 3px;
+	box-shadow: 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 #showcase h2 {
@@ -152,4 +155,10 @@ nav > div:first-child {
 
 .flex-container > :first-child {
 	margin-right: 16px;
+}
+
+@media screen and (max-width: 930px) {
+	.flex-container {
+		flex-direction: column-reverse;
+	}
 }
