Rough implementation of People, credits spacing
- Itchio Link

--- a/src/pages/games/soul-searcher.astro
+++ b/src/pages/games/soul-searcher.astro
@@ -22,7 +22,7 @@
 				<p><em>Soul Searcher</em> is a turn-based strategy game with procedurally generated dungeons where you have to delve through a dead man’s memories in order to find his soul. </p>
 				<p>Create synergies between your team, become capable of overcoming increasingly difficult enemies, reap the rewards and perfect your dream-dwelling team.</p>
 			</div>
-			<a href="#">
+			<a href="https://playmakersdevteam.itch.io/soul-searcher" target="_blank">
 				<button>Available on Itchi.io</button>
 			</a>
 			<img src="/assets/images/soul-searcher/spawn.gif" alt="">
@@ -34,7 +34,6 @@
 		
 		<nav class>
 			<a href="#socials">SOCIALS</a>
-			<a href="#devlogs">DEVLOGS</a>
 			<a href="#team">TEAM</a>
 		</nav>
 		
@@ -69,12 +68,6 @@
 				</a>
 			</div>
 		</section>
-
-		<section id="devlogs" class="text-section">
-			<h2>Devlogs</h2>
-			<p>More to come ;) ...</p>
-		</section>
-		
 
 		<section id="team" class="text-section">
 			<h2>Our Wonderful Team</h2>
