--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@
 				</div>
 				<div class="link">
 					<img src="/assets/icons/people.svg" alt="People icon">
-					<a href="#">
+					<a href="/people">
 						<p>People</p>
 					</a>
 				</div>
